--- a/node-express/package.json
+++ b/node-express/package.json
@@ -12,7 +12,6 @@
     "express": "^4.11.2",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.12.0",
-    "express": "^4.11.2",
     "jsonwebtoken": "^3.2.2",
     "mongoose": "^3.8.23",
     "morgan": "^1.5.1"
@@ -21,6 +20,7 @@
     "gulp": "^3.8.11",
     "gulp-livereload": "^3.7.0",
     "gulp-nodemon": "^1.0.5",
-    "gulp-watch": "^4.1.1"
+    "gulp-watch": "^4.1.1",
+    "ngrok": "^0.1.99"
   }
 }
