--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
   "author": "Gregory Daynes",
   "license": "GPL3",
   "dependencies": {
+    "acl": "^0.4.7",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.12.0",
-    "express": "^4.11.2",
+    "express": "^4.12.0",
     "jsonwebtoken": "^3.2.2",
+    "mongodb": "^1.4.31",
     "mongoose": "^3.8.23",
     "morgan": "^1.5.1"
   },
   "devDependencies": {
     "gulp": "^3.8.11",
-    "gulp-livereload": "^3.7.0",
+    "gulp-livereload": "^3.8.0",
     "gulp-nodemon": "^1.0.5",
     "gulp-watch": "^4.1.1",
     "ngrok": "^0.1.99"
